2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/PeerConnection.cc
	* src/PeerConnection.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/Option.cc
	* src/Option.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/Netrc.cc
	* src/Netrc.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/LogFactory.cc
	* src/LogFactory.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/HttpResponse.cc
	* src/HttpResponse.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/HttpRequest.cc
	* src/HttpRequest.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/HttpHeader.cc
	* src/HttpHeader.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables. Removed unused member variable.
	* src/AbstractProxyRequestCommand.cc
	* src/FtpInitiateConnectionCommand.cc
	* src/FtpNegotiationCommand.cc
	* src/HttpConnection.cc
	* src/HttpConnection.h
	* src/HttpInitiateConnectionCommand.cc

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed HandleRegistry
	* src/HandleRegistry.h
	* src/Makefile.am

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/FtpConnection.cc
	* src/FtpConnection.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/FileEntry.cc
	* src/FileEntry.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/File.cc
	* src/File.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made protected member variable private. Added accessor funcs.
	* src/BtPostDownloadHandler.cc